--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="7-e.c">
+    <ClCompile Include="测试.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
