上传学姐给的OJ文档，含题目，答案与解析

--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="照博7-d.c" />
+    <ClCompile Include="董岩博.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
