--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="照博7-d.c">
+    <ClCompile Include="董岩博.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
