--- a/Project1.vcxproj.filters
+++ b/Project1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="董岩博.c">
+    <ClCompile Include="邵沛祖7-c.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
